# FlightDeck

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
dev/: tui-shared-engine-plan.md
docs/: index.html
src/: app.rs  command_palette.rs  main.rs  theme.rs
src/core/: agent.rs  agent_config.rs  error_classifier.rs  flight.rs  git.rs  mod.rs  orchestrator.rs  provider_config.rs  pty.rs  shared.rs  storage.rs  workspace.rs
src/core/native/: chat.rs  compaction.rs  conversation.rs  mock_provider.rs  mod.rs  runner.rs  safety.rs
src/core/native/provider/: anthropic.rs  mod.rs
src/core/native/tool/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
src/themes/: catppuccin_mocha.json  default_dark.json  gruvbox_dark.json  nord.json  tokyonight.json
src/views/: agent.rs  agents.rs  dashboard.rs  flight_detail.rs  flight_editor.rs  mod.rs  providers.rs  sessions.rs  settings.rs
src/widgets/: diff.rs  help.rs  markdown.rs  mod.rs  toast.rs
